[package]
name = "affinity_change"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.33.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Wdk_System_Threading",
    "Win32_System_Kernel",
    "Win32_UI_Shell"
]
